--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,9 +8,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Poketinder">
+        android:theme="@style/Theme.PokeTinderNew">
         <activity
-            android:name=".SplashActivity"
+            android:name=".activity.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,8 +20,26 @@
         </activity>
 
         <activity
-            android:name=".MainActivity"
+            android:name=".activity.MainActivity"
             android:exported="true" >
+        </activity>
+
+        <activity
+            android:name=".activity.LoginActivity"
+            android:exported="true">
+
+        </activity>
+
+        <activity
+            android:name=".activity.RegisterActivity"
+            android:exported="true">
+
+        </activity>
+
+        <activity
+            android:name=".activity.OnboardingActivity"
+            android:exported="true">
+
         </activity>
     </application>
 </manifest>
