--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PokeTinderNew">
         <activity
-            android:name=".activity.SplashActivity"
+            android:name=".ui.view.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,24 +20,24 @@
         </activity>
 
         <activity
-            android:name=".activity.MainActivity"
+            android:name=".ui.view.MainActivity"
             android:exported="true" >
         </activity>
 
         <activity
-            android:name=".activity.LoginActivity"
+            android:name=".ui.view.LoginActivity"
             android:exported="true">
 
         </activity>
 
         <activity
-            android:name=".activity.RegisterActivity"
+            android:name=".ui.view.RegisterActivity"
             android:exported="true">
 
         </activity>
 
         <activity
-            android:name=".activity.OnboardingActivity"
+            android:name=".ui.view.OnboardingActivity"
             android:exported="true">
 
         </activity>
