--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.eguia.poketinder">
+    package="com.eguia.poketinder" >
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
+        android:name=".PokeTinderNewApp"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.PokeTinderNew">
+        android:theme="@style/Theme.PokeTinderNew" >
+
         <activity
             android:name=".ui.view.SplashActivity"
             android:exported="true">
@@ -41,5 +44,7 @@
             android:exported="true">
 
         </activity>
+
     </application>
+
 </manifest>
